aplicando aprendizado de html na aula9 e aula10

--- a/mes-2-dominando-front-end/aula-9/index.html
+++ b/mes-2-dominando-front-end/aula-9/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
-        
+    <title>     </title>
 
 
   </head>
@@ -11,7 +11,7 @@
     <div>
         <!--div cabeçalho-->
         <div>
-            <img src="https://ituring.com.br/favicon,ico"/>
+            <img src="https://ituring.com.br/favicon.ico" alt="ITuring" />
             <!--div busca-->
             <div>
                 <input type="text" title="Busca Por Produtos" value="" placeholder="Buscar Por Produtos"/>
@@ -20,9 +20,10 @@
             <a href="./carrinho.html" title="" a></a>
         </div>
         <!--div container-->
-        <div>
+        <main>
             <!--div ordenar-->
             <div>
+
             </div>
             <!--div container card-->
             <div>
@@ -33,11 +34,11 @@
 
                 </div>
             </div>
-        </div>
+        </main>
         <!--div rodapé-->
-        <div>
+        <footer>
             <span>Corprigth</span>
-        </div>
+        </footer>
     </div>
   </body>
 </html>
